# DevelopersHub-Internship-Programme

./: .gitignore  main.py  pyproject.toml  requirements.txt
Phase-I/Task-I/: iris_visualization.ipynb
Phase-I/Task-II/: future_stocks.ipynb
Phase-I/Task-III/: heart_disease_prediction.ipynb
Phase-I/Task-IV/: health_chatbot.ipynb
Phase-I/Task-V/: README.md
Phase-I/Task-VI/: house_price_prediction.ipynb
Phase-II/Task-I/: app.py  fine_tuning_bert.ipynb
Phase-II/Task-II/: customer_churn_prediction.ipynb
