[project]
name = "developershub-internship-programme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=2.21.0",
    "google-genai>=2.8.0",
    "imbalanced-learn>=0.14.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "xgboost>=3.3.0",
    "yfinance>=1.4.1",
]
